2002-10-01  David Hyatt  <hyatt@apple.com>

	Backing out change to render_table.cpp.  The original logic
	(in version 1.16) is correct.
	
        * khtml/rendering/render_table.cpp:
        (RenderTable::addColInfo):

2002-09-30  Darin Adler  <darin@apple.com>

        * kwq/qt/qobject.h: Add the destroyed signal.
        * kwq/KWQObject.mm:
        (QObject::connect): Remove names of parentDestroyed and slotWidgetDestructed
	from the list of "slots OK to fail to connect without complaining".
        (QObject::QObject): Initialize the destroyed signal.

        * kwq/qt/qguardedptr.h:
        * kwq/KWQGuardedPtr.mm:
        * kwq/KWQSignal.h:
        * kwq/KWQSlot.h:
	Rearrange includes so qobject.h can include KWQSignal.h.

        * kwq/KWQSignal.mm: Tweak.

        * kwq/KWQSlot.mm: Added support for the parentDestroyed slot in KJS::WindowQObject
	and the slotWidgetDestructed slot in khtml::RenderWidget.

2002-09-28  Darin Adler  <darin@apple.com>

	Turn -Werror back on. There must have been some miscommunication
	about the fat build; this was supposed to have been on.

        * WebCore.pbproj/project.pbxproj: Add -Werror back.

        * kwq/WebCoreHistory.h: Add missing method to fix warning.
        * kwq/KWQKHistoryProvider.mm: Tweak.

2002-09-28  Darin Adler  <darin@apple.com>

	Give the next fat build a better chance of working with the
	new gcc without turning -Werror off.

        * khtml/css/cssparser.cpp: Use a macro to disable inlining.
        * khtml/html/htmltokenizer.cpp: Ditto.
        * khtml/misc/htmlhashes.cpp: Ditto.

2002-09-28  Darin Adler  <darin@apple.com>

	- fixed 3022441 -- scroll bar is missing in window created with window.open

        * khtml/ecma/kjs_window.cpp: (WindowFunc::tryCall): The checks for extra
	parameters to window.open were using isNull, which checks for a null ValueImp
	pointer, not an "Undefined".

2002-09-28  Darin Adler  <darin@apple.com>

	- fixed 2886111 -- changing font or size preference causes open