@@ -509,21 +509,19 @@ void RenderTable::addColInfo(int _startCol, int _colSpan,
 
 	changed = true;
     } else {
-	if (_minSize > col->min)
-	{
+	if (_minSize != col->min) {
 	    if ( allowRecalc && col->minCell == _cell ) {
 		recalc = true;
-	    } else {
+	    } else if ( _minSize > col->min ) {
 		col->min = _minSize;
 		col->minCell = _cell;
 		changed = true;
 	    }
 	}
-	if (_maxSize > col->max)
-	{
+	if (_maxSize != col->max) {
 	    if ( allowRecalc && col->maxCell == _cell ) {
 		recalc = true;
-	    } else {
+	    } else if (_maxSize > col->max) {
 		col->max = _maxSize;
 		col->maxCell = _cell;
 		changed = true;
